# deeplab-ncnn-demo

./: README.md
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
model_param/: deeplab_torch_quantized.param
ppq/: deeplab2ncnn.py  deeplabtest.py
src/: deeplab.cpp
